--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_API_KEY</string>
+  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAT_cJDBC2r1qjWy2tgefKR4EKtmk72RlM</string>
 </resources>
